<resources>
    <string name="tablet_main_title">片单</string>
    <string name="tablet_main_right_title">投稿</string>
    <string name="tablet_main_search">搜索片单</string>
    <string name="tablet_main_recy_title">时光甄选片单</string>
    <string name="tablet_main_mine">我的片单</string>
    <string name="tablet_main_create">创建我的片单</string>
    <string name="tablet_film_list_create">创建片单</string>
    <string name="tablet_film_list_create_success">创建完成</string>
    <string name="tablet_film_list_edit">编辑片单</string>
    <string name="tablet_film_list_title">片单名称</string>
    <string name="tablet_film_list_content">片单简介</string>
    <string name="tablet_film_list_bg">片单背景图</string>
    <string name="tablet_film_list_contains">包含影片</string>
    <string name="tablet_film_list_open_text">公开片单，优质片单将有机会被推荐展示</string>
    <string name="tablet_film_list_save">保存</string>
    <string name="tablet_film_list_text_limit">%1$s / %2$s</string>
    <string name="tablet_film_list_create_over">片单创建完成</string>
    <string name="tablet_film_list_create_over_content">基础信息请等待审核，您可以添加片单中的影片了，您也可以后续添加或在影片浏览过程中将影片收藏进片单。</string>
    <string name="tablet_film_list_now_add">现在添加</string>
    <string name="tablet_film_list_after_add">以后添加</string>
    <string name="tablet_film_list_click_search_add_film">点击搜索栏添加影片</string>
    <string name="tablet_film_list_add_film">添加影片</string>
    <string name="tablet_film_list_selected_film">已选影片</string>
    <string name="tablet_film_list_input_film_name">请输入影片名称…</string>
    <string name="tablet_film_list_sure">确认</string>
    <string name="tablet_film_list_selected">已选(%1$d)</string>
    <string name="tablet_film_list_add">添加</string>
    <string name="tablet_film_list_have_add">已添加</string>
    <string name="tablet_film_list_time_score">时光评分</string>
    <string name="tablet_film_details_msg">- 更多片单请前往APP端查看 -</string>
    <string name="tablet_film_details_mtime">Mtime·让电影遇见生活</string>
    <string name="tablet_film_details_share">- 分享至 -</string>
    <string name="tablet_film_details_title">片单详情</string>
    <string name="tablet_film_details_collection">已收藏</string>
    <string name="tablet_film_details_unCollection">收藏</string>
    <string name="tablet_film_details_rating">时光评分</string>
    <string name="tablet_film_details_readtag">已看过</string>
    <string name="tablet_film_details_readMovie">在线观影：</string>
    <string name="tablet_film_dialog_msg">是否删除当前片单</string>
    <string name="tablet_film_dialog_ok">确认</string>
    <string name="tablet_film_dialog_cancel">再想想</string>
    <string name="tablet_film_list_label">标签</string>
    <string name="tablet_film_list_del">删除</string>
    <string name="tablet_film_share_wechat">微信好友</string>
    <string name="tablet_film_share_wechat_time">朋友圈</string>
    <string name="tablet_film_share_qq">QQ好友</string>
    <string name="tablet_film_share_sing">微博</string>
    <string name="tablet_film_details_numPlayable">%1$s部可观看</string>
    <string name="tablet_film_details_numUnread">%1$s部未看过</string>
    <string name="tablet_film_list_current_subject">本期主题</string>
    <string name="tablet_film_list_history_subject">历史主题</string>
    <string name="tablet_film_list_shortlisted">入围达人榜</string>
    <string name="tablet_film_list_people_count">%1$s人参与</string>
    <string name="tablet_film_list_num_finalists">%1$s次入围</string>
    <string name="tablet_film_list_time_scope">%1$s - %2$s</string>
    <string name="tablet_film_list_activity_info">活动说明</string>
    <string name="tablet_film_list_shortlist_info">达人评选标准</string>
    <string name="tablet_film_list_shortlist_info_content">最终确认考核公式：达人考核公式：达人指数=(回复数+推荐数)*60%+(被赞数+被采纳数)*40% \n\n某达人获得的财富值=某达人指数/所有达人总指数*3万点财富值</string>
    <string name="tablet_film_list_cancel">取消</string>
    <string name="tablet_film_list_from_my_create">从我的片单中选择</string>
    <string name="tablet_film_list_new_create">新建片单</string>
    <string name="tablet_film_list_film_num">%1$d部影片</string>
    <string name="tablet_film_list_back_film_list">返回片单</string>
    <string name="tablet_film_list_go_on_contribute">继续投稿</string>
    <string name="tablet_film_list_repeat_select">重新选择</string>
    <string name="tablet_film_list_contribute_over">投稿完成</string>
    <string name="tablet_film_list_contribute_error">投稿失败</string>
    <string name="tablet_film_list_contribute_content_over">感谢您的参与，请耐心等待运营人员对您的投稿内容进行审核，如被采纳推荐，将通过站内消息通知您 !</string>
    <string name="tablet_film_list_contribute_content_error">抱歉，投稿失败，请重新尝试或稍后再试 !</string>
    <string name="tablet_film_list_create_by_mine">我创建的</string>
    <string name="tablet_film_list_collection_by_mine">我收藏的</string>
    <string name="tablet_film_list_of_mine">我的片单</string>
    <string name="tablet_film_list_watch_num">看过 %1$d/%2$d 部</string>
    <string name="tablet_film_list_modify_time">%1$s更新</string>
    <string name="tablet_film_list_cancel_collection">是否取消收藏</string>
    <string name="tablet_film_list_title_empty_show">请输入片单名称</string>
    <string name="tablet_main_num_favorites">%1$s 人收藏</string>
    <string name="tablet_main_numRead">已看</string>
    <string name="tablet_main_numRead_b">部</string>
    <string name="tablet_main_numRead_c">/共</string>
    <string name="tablet_main_numRead_look">已看 %1$s 部/共 %2$s 部</string>
    <string name="tablet_film_list_details_update">更新于 %1$s</string>
    <string name="tablet_film_list_failured">已失效</string>
</resources>